--- a/res/layout/regist_act_name.xml
+++ b/res/layout/regist_act_name.xml
@@ -14,6 +14,7 @@
 
 <TableRow>
 <EditText 
+    android:id="@+id/edit_act_name"
     android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             
