--- a/res/layout/regist_info.xml
+++ b/res/layout/regist_info.xml
@@ -14,6 +14,7 @@
             android:textSize="16sp" />
 
         <EditText
+            android:id="@+id/edit_UserName1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="请填写真实姓名"
@@ -30,6 +31,7 @@
         <!-- android:inputType="numberPassword"表明只能接收数字密码 -->
 
         <EditText
+            android:id="@+id/edit_Password"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="请输入6-12位密码"
@@ -46,6 +48,7 @@
         <!-- android:inputType="numberPassword"表明只能接收数字密码 -->
 
         <EditText
+            android:id="@+id/edit_PasswordAgain"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="请输入6-12位密码"
@@ -61,6 +64,7 @@
             android:textSize="16sp" />
 
         <EditText
+            android:id="@+id/edit_Mailbox"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:selectAllOnFocus="true" />
@@ -76,6 +80,7 @@
         <!-- inputType="date"表明是日期输入框 -->
 
         <EditText
+            android:id="@+id/edit_Class"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="格式为:院系-年级-班级" />
@@ -91,6 +96,7 @@
         <!-- inputType="phone"表明是输入电话号码的输入框 -->
 
         <EditText
+            android:id="@+id/edit_Phone"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="请填写11位电话号码"
