--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,4 +13,34 @@
         android:layout_height="wrap_content"
         android:text="传说中的甲烷界面" />
 
+     <Button
+         android:id="@+id/btn_funtouch"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="FunTouch" />
+
+     <Button
+         android:id="@+id/btn_social"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="社交" />
+
+     <Button
+         android:id="@+id/btn_game_help"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="桌游小助手" />
+
+     <Button
+         android:id="@+id/btn_setting"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="设置" />
+
+     <Button
+         android:id="@+id/btn_about_activity"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="关于活动" />
+
 </TableLayout>
