--- a/res/layout/vote_click_add.xml
+++ b/res/layout/vote_click_add.xml
@@ -6,16 +6,6 @@
     android:gravity="center|center_vertical|top"
     android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/btn_click_add"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="106dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="点击添加"
-        android:textSize="20sp" />
-
     <ListView
         android:id="@+id/lsv_vote"
         android:layout_width="match_parent"
@@ -25,5 +15,26 @@
         android:layout_alignParentTop="true" >
 
     </ListView>
+
+    <Button
+        android:id="@+id/btn_click_add"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="106dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/btn_use"
+        android:layout_alignBottom="@+id/btn_use"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="36dp"
+        android:text="添加活动"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/btn_use"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="40dp"
+        android:layout_toRightOf="@+id/btn_click_add"
+        android:text="开始使用" />
 
 </RelativeLayout>
