--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -38,6 +38,12 @@
          android:text="设置" />
 
      <Button
+         android:id="@+id/btn_login"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="登陆/注册" />
+
+     <Button
          android:id="@+id/btn_about_activity"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
