可查看活动
1.可在活动页面查看活动
2.主页增加双击返回键退出
3.活动详情还没行

--- a/res/layout/user_menu.xml
+++ b/res/layout/user_menu.xml
@@ -43,4 +43,13 @@
         android:layout_marginTop="27dp"
         android:text="无纸传单" />
 
+    <Button
+        android:id="@+id/btn_logoff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/btn_sign_up"
+        android:layout_marginLeft="21dp"
+        android:text="注销" />
+
 </RelativeLayout>
