--- a/res/layout/about_activity.xml
+++ b/res/layout/about_activity.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <ListView
-        android:id="@+id/lsv_organization"
+        android:id="@+id/lsv_act_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/btn_see_activity"
